--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Suma de dos numeros</title>
+    <title>Suma numeros</title>
 </head>
 <body>
     <label for="numero1">Ingresa un numero: </label>
