--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Suma numeros</title>
 </head>
 <body>
-    <label for="numero1">Ingresa un numero: </label>
+    <label for="numero1">Ingresa el primer numero: </label>
     <input type="number" id="numero1">
     <br>
     <br>
