--- a/index.html
+++ b/index.html
@@ -3,32 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Suma numeros</title>
+    <title>Suma de dos números</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <label for="numero1">Ingresa el primer numero: </label>
-    <input type="number" id="numero1">
-    <br>
-    <br>
-    <label for="numero2">Ingresa otro numero: </label>
-    <input type="number" id="numero2">
-    <br>
-    <br>
+    <div class="container">
+        <h1>Suma de números</h1>
+        <label for="numero1">Ingresa un número: </label>
+        <input type="number" id="numero1">
+        <label for="numero2">Ingresa otro número: </label>
+        <input type="number" id="numero2">
+        <button onclick="sumar()">Sumar</button>
+        <p id="resultado"></p>
+    </div>
 
-
-    <button onclick="sumar()">Sumar</button>
-
-    <p id="resultado"></p>
-
-    <script>
-        function sumar(){
-            let churpia1 = document.getElementById('numero1').value;
-            let churpia2 = document.getElementById('numero2').value;
-
-            let caquita = parseInt(churpia1) + parseInt(churpia2);
-
-            document.getElementById('resultado').innerHTML = `El resultado de la suma es: ${caquita}`;
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
